# deeplearning

./: .gitignore  Readme.md
autodiff/: autodiff.py  autodiff_dynamic.py  autodiff_dynamic_test.py  autodiff_test.py  logistic_regression.py
cpp/: .clang-format  CMakeLists.txt
cpp/cmake/: gtest.cmake
cpp/playground/: CMakeLists.txt  hello.cc
cv/yolo_v3/: train.py  utils.py
cv/yolo_v3/data/: coco.py  coco_dataset.py  data_transforms.py
cv/yolo_v3/models/: darknet.py  head.py  neck.py  yolov3.py
docker/: cuda10.1-dev  cuda11.1-dev  cuda11.2-dev
docs/: Tips.md
docs/cpp/: 多线程.md  异常.md
docs/cv/: OpenMMLab.md  medical_image.md
docs/mlsys/: MLSys.md  MindSpore.md  ONNXRuntime性能测试.md  OneFlow.md  PyTorch.md
docs/mlsys/Inference/: 推理平台调研.md
docs/notes/RL/: 价值学习.md  强化学习基础.md
docs/notes/cpp/: CUDA.md  容器.md  模板.md  现代C++.md  迭代器.md
docs/rl/: 策略学习.md  马尔可夫过程.md
docs/survey/Ray/: RayServe调研.md
learn/numpy/: linear_regression.ipynb  logistic_regression.ipynb
learn/pytorch/: torch_basic.ipynb  torch_loss.ipynb
learn/statistical_learning_methods/: 01_intro.ipynb  02_perceptron.ipynb  03_kNN.ipynb  04_naive_bayes.ipynb  05_decision_tree.ipynb  06_logistic.ipynb  sklearn_dataset.ipynb
learn/tensorflow/: keras_fit.ipynb  keras_loss.ipynb  keras_seq.ipynb  tf_gradient.ipynb  tf_graph.ipynb  tf_module.ipynb  tf_train.ipynb
nlp/couplets/: MLmodel  bert_seq_model.py  run_couplet.py  run_couplet_trainer.py
nlp/couplets/data/: vocabs.txt
nlp/legacy/couplets/: Readme.md  couplet_mlflow.py  run_couplet_seq.py  utils_couplet.py  utils_couplet_trainer.py
nlp/legacy/mrc/: utils_squad.py
nlp/legacy/ner/: run_ner.py  utils_ner.py
nlp/legacy/text-classification/: Readme.md  (+1 more)
nlp/mrc/: Readme.md  run_squad.py  utils_squad_evaluate.py
nlp/ner/: Readme.md  run_ner_msra.py  run_tf_ner.py  utils_ner_msra.py
nlp/text-classification/: utils_classifier.py
nlp/transformer/: README.md  __init__.py  builder.py  convert_weights.py
openvino/: api_tutorial.ipynb  benchmark.sh  convert_pytorch_onnx.ipynb  performence_bert.ipynb  performence_maskrcnn.ipynb  performence_mobilenetv3.ipynb  performence_test.ipynb  performence_yolov5.ipynb  performence_yolov5_helmet.ipynb  tf.ipynb
openvino/pot/: mobilenetv3_tf.yaml  mobilenetv3_tf_int8.json  resnet50_onnx.yaml  resnet50_onnx_int8.json  resnet50_tf.yaml  resnet50_tf_int8.json  yolov5_onnx.yaml  yolov5_onnx_int8.json
rl/: eval.py  train.py
rl/omrl/: __init__.py  agent.py  buffer.py  builder.py  env.py  net.py  optimizer.py  run.py
(+106 files in other folders)
